--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "uplayout": "node_modules/.bin/webpack --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "up": "node_modules/.bin/webpack --config=node_modules/laravel-mix/setup/webpack.config.js",
     "dev": "npm run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "npm run development -- --watch",
