--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "author": "Mirelle Nascimento",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "laravel-mix": "^5.0.9",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.30.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.12"
   }
 }
